<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true"
    android:layout_height="wrap_content"
    android:id="@+id/cardWorkingSession">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dateWorkingSession"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/appointment_date"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/subHeadingWorkingPartner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="8dp"
            android:text="You suggested to"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardWorkingPartner"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:elevation="12dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:id="@+id/imageWorkingPartner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/maria_gracia"
                    android:contentDescription="@string/user_profile_image" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/workingPartnerFullName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/working_partner_name"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/where"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="To work from"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardWorkingPlace"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:elevation="12dp"
                android:innerRadius="0dp"
                android:shape="ring"
                android:thicknessRatio="1.9"
                app:cardCornerRadius="40dp">

                <ImageView
                    android:id="@+id/imageWorkingPlace"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/image_place_to_work_from"
                    android:src="@drawable/startbucks" />

            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/workingPlaceName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/working_place_name"
                    android:textAlignment="center"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/workingPlaceAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/workingPlaceName"
                    android:layout_alignParentLeft="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/working_place_name"
                    android:textAlignment="center"
                    android:textSize="15sp" />

            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/swipeUpText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginVertical="5dp"
            android:textSize="18dp"
            android:text="Waiting for response"
            android:textAlignment="center" />
    </LinearLayout>
</androidx.cardview.widget.CardView>